# EXAUQ-Toolbox

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CITATION.cff  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SUPPORT.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENCE.md  LICENSE.txt  README.md  SUPPORT.md
.github/workflows/: docs-build.yml  documentation_upload.yml  linting-checks.yml  test-package.yml  update-poetry-lock.yml
api/: SUMMARY.html  __init__.html
api/core/: __init__.html  designers.html  emulators.html  modelling.html  numerics.html
api/sim_management/: __init__.html  hardware.html  jobs.html  simulators.html  types.html
cli/: first-walkthrough.html  index.html  main.py
cli/simulation/: commands.py
cli/user-guides/: cancelling-jobs.html  index.html  resubmitting-jobs.html  showing-jobs.html  simulator-script.html
cli/utils/: state_management.py
cli_rough/: main.py
cli_rough/simulation/: commands.py
designers/: index.html
designers/tutorials/: index.html  mlas_tutorial.html  slas_tutorial.html  training_gp_tutorial.html  training_multi_level_gp_tutorial.html
docs/: Single_level_LOO_adaptive_sampling.ipynb  Single_level_LOO_adaptive_sampling.md  index.md
docs-site/: 404.html  index.html
docs/cli/: first-walkthrough.md  index.md  simulator-script.md
docs/data/: gp_training_data.csv
docs/designers/: index.md  slas_tutorial.ipynb  typical-multi-level-adaptive-design.md
docs/javascripts/: katex.js
examples/: cli.md  emulator_training.py  gui_test.py  mogp_wrapping.py  retrieving_simulations.py  simulator_factory_example.py  single_level_adaptive_sampling.py  using_local_simulator.py
exauq/: __init__.py  __main__.py  designer.py  scheduler.py  simulator.py  surrogate.py
exauq/app/: app.py  cli.py  plugin_loader.py  startup.py  table.py
exauq/cli/: main.py
exauq/core/: __init__.py  designers.py  emulators.py  event.py  hardware.py  jobs.py  modelling.py  numerics.py  scheduler.py  simulator.py  simulators.py  types.py
exauq/dashboard/: exa_dash.py  exadash.py
exauq_daemon/: daemon_service.py  exauq_daemon.py
scripts/: build_docs.py  build_notebooks.py  gen_ref_pages.py
test_functions/: dummy_sims.py  simple_2d_2lvl.py
utilities/: secure_shell.py
(+113 files in other folders)
