[tool.poetry]
authors = ["Exeter RSE Group"]
description = "A toolbox for doing uncertainty quantification at the exascale"
name = "exauq"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = ">=1.10.0"
numpy = ">=1.24.0"
mogp-emulator = ">=0.7.0"
fabric = ">=3.2.0"

[tool.poetry.group.dev.dependencies]
black = ">=22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exauq = "exauq.app.cli:main"