[tool.poetry]
authors = ["Exeter RSE Group"]
description = "A toolbox for doing uncertainty quantification at the exascale"
name = "exauq"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
scipy = ">=1.10.0"
numpy = ">=1.24.0"
mogp-emulator = ">=0.7.0"
fabric = ">=3.2.0"
cmd2 = ">=2.4.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.18"
pygments = "^2.17.2"
mkapi = "^2.1.0"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"
notebook = "^7.2.2"
isort = "^5.13.2"
black = "^24.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exauq = "exauq.__main__:main"

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
